骨架解算优化

--- a/mods/ts/weapons/smallguns.yaml
+++ b/mods/ts/weapons/smallguns.yaml
@@ -26,7 +26,7 @@
 
 A10Vulcan:
 	Inherits: ^MG
-	ValidTargets: Ground, Water, Air
+	ValidTargets: Ground, Water
 	ReloadDelay: 100
 	MinRange: 4c512
 	Burst: 15
@@ -44,6 +44,7 @@ A10Vulcan:
 		Speed: 1100
 		LaunchAngle: 10
 		ZOffset: 1024
+		Inaccuracy: 1c0
 	Warhead@1Dam: SpreadDamage
 		Damage: 5000
 		Spread: 0c372
@@ -51,15 +52,12 @@ A10Vulcan:
 
 
 TestVulcan:
-	Inherits: A10Vulcan
-	ReloadDelay: 50
+	Inherits: ^MG
+	ValidTargets: Ground, Water, Air
+	ReloadDelay: 3
 	MinRange: 0c512
-	Burst: 10
-	BurstDelays: 3
-	Range: 10c0
+	Range: 50c0
 	Report: cygun1.aud
-	FirstBurstTargetOffset: -3000,0,0
-	FollowingBurstTargetOffset: 600,0,0
 	Projectile: Bullet
 		ContrailLength: 3
 		ContrailWidth: 44
@@ -69,6 +67,7 @@ TestVulcan:
 		Speed: 1100
 		LaunchAngle: 10
 		ZOffset: 1024
+		Inaccuracy: 1c0
 	Warhead@1Dam: SpreadDamage
 		Damage: 3000
 		Spread: 0c372
