--- a/OpenRA.Game/OpenRA.Game.csproj
+++ b/OpenRA.Game/OpenRA.Game.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Remove="Graphics\Graphics3D\BlendTreeNode\Translate2.cs" />
     <Compile Remove="Graphics\Graphics3D\ModelBase.cs" />
   </ItemGroup>
   <ItemGroup>
