炮塔角度限制

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -62,24 +62,24 @@ RUTEST:
 	AttackAttachmentTurreted:
 		Turrets: turret1, turret2
 		Voice: Attack
-	WithSkeleton@turret1:
-		SkeletonDefine: turret-test
-		Name: turret_skeleton1
-	TurretAttachment@1:
-		Name: turret1
-		SkeletonBinded: body
-		AttachingBone: a-s-Rig_Hand.R
-		AttachmentSkeleton: turret_skeleton1
-		TurretBone: a-s-Base
-		BarrelBone: a-s-Barrel
-		Scale: 4
-		Mesh: turret
-	AttachedArmament@1:
-		Weapon: TestVulcan
-		SkeletonToUse: turret_skeleton1
-		FromBonePose: a-s-Barrel
-		FacingTolerance: 40
-		Turret: turret1
+	# WithSkeleton@turret1:
+	# 	SkeletonDefine: turret-test
+	# 	Name: turret_skeleton1
+	# TurretAttachment@1:
+	# 	Name: turret1
+	# 	SkeletonBinded: body
+	# 	AttachingBone: a-s-Rig_Hand.R
+	# 	AttachmentSkeleton: turret_skeleton1
+	# 	TurretBone: a-s-Base
+	# 	BarrelBone: a-s-Barrel
+	# 	Scale: 4
+	# 	Mesh: turret
+	# AttachedArmament@1:
+	# 	Weapon: TestVulcan
+	# 	SkeletonToUse: turret_skeleton1
+	# 	FromBonePose: firepose
+	# 	FacingTolerance: 40
+	# 	Turret: turret1
 	WithSkeleton@turret2:
 		SkeletonDefine: turret-test
 		Name: turret_skeleton2
@@ -95,7 +95,7 @@ RUTEST:
 	AttachedArmament@2:
 		Weapon: TestVulcan
 		SkeletonToUse: turret_skeleton2
-		FromBonePose: a-s-Barrel
+		FromBonePose: firepose
 		FacingTolerance: 40
 		Turret: turret2
 	DamagedByTerrain@VEINS:
@@ -113,7 +113,7 @@ RUTEST2:
 	RenderMeshes:
 		Image: rumya-2
 		ZOffset: 0
-		Scale: 8
+		Scale: 15
 	Tooltip:
 		Name: Test 2
 	Health:
@@ -129,24 +129,31 @@ RUTEST2:
 	AttackAttachmentTurreted:
 		Turrets: turret1, turret2
 		Voice: Attack
-	WithSkeleton@turret1:
-		SkeletonDefine: turret-test
-		Name: turret_skeleton1
-	TurretAttachment@1:
-		Name: turret1
-		SkeletonBinded: body
-		AttachingBone: s-Adj_Butt.R
-		AttachmentSkeleton: turret_skeleton1
-		TurretBone: a-s-Base
-		BarrelBone: a-s-Barrel
-		Scale: 3
-		Mesh: turret
-	AttachedArmament@1:
-		Weapon: TestVulcan
-		SkeletonToUse: turret_skeleton1
-		FromBonePose: firepose
-		FacingTolerance: 40
-		Turret: turret1
+	# WithSkeleton@turret1:
+	# 	SkeletonDefine: turret-test
+	# 	Name: turret_skeleton1
+	# TurretAttachment@1:
+	# 	Name: turret1
+	# 	SkeletonBinded: body
+	# 	AttachingBone: s-Adj_Butt.R
+	# 	AttachmentSkeleton: turret_skeleton1
+	# 	TurretBone: a-s-Base
+	# 	BarrelBone: a-s-Barrel
+	# 	Scale: 5
+	# 	Mesh: turret
+	# 	RotationSpeed: 2.0
+	# 	InitTurretAngle: -90
+	# 	TurretRotationMin: -180
+	# 	TurretRoataionMax: 0
+	# 	InitBarrelAngle: 45
+	# 	BarrelMaxDepression: 15
+	# 	BarrelMaxElevation: 80
+	# AttachedArmament@1:
+	# 	Weapon: TestVulcan
+	# 	SkeletonToUse: turret_skeleton1
+	# 	FromBonePose: firepose
+	# 	FacingTolerance: 40
+	# 	Turret: turret1
 
 	WithSkeleton@turret2:
 		SkeletonDefine: turret-test
@@ -158,8 +165,15 @@ RUTEST2:
 		AttachmentSkeleton: turret_skeleton2
 		TurretBone: a-s-Base
 		BarrelBone: a-s-Barrel
-		Scale: 3
+		Scale: 7
 		Mesh: turret
+		RotationSpeed: 2.0
+		InitTurretAngle: 90
+		TurretRotationMin: 0
+		TurretRoataionMax: 180
+		InitBarrelAngle: 45
+		BarrelMaxDepression: 15
+		BarrelMaxElevation: 80
 	AttachedArmament@2:
 		Weapon: TestVulcan
 		SkeletonToUse: turret_skeleton2
