--- a/mods/ts/rules/nod-infantry.yaml
+++ b/mods/ts/rules/nod-infantry.yaml
@@ -22,9 +22,9 @@ E3:
 		Speed: 56
 	Armament@PRIMARY:
 		Weapon: Bazooka
-		LocalOffset: 356,0,967
+		LocalOffset: 356,0,558
 	TakeCover:
-		ProneOffset: 52,64,-652
+		ProneOffset: 52,64,0
 	AttackFrontal:
 		Voice: Attack
 		FacingTolerance: 0
@@ -106,7 +106,7 @@ CYC2:
 		Range: 7c0
 	Armament:
 		Weapon: CyCannon
-		LocalOffset: 240,120,966
+		LocalOffset: 240,120,558
 	AttackFrontal:
 		Voice: Attack
 		FacingTolerance: 0
