--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -140,7 +140,7 @@ RUTEST2:
 	TurretAttachment@1:
 		Name: turret1
 		SkeletonBinded: body
-		AttachingBone: s-Adj_Butt.R
+		AttachingBone: a-s-Rig_Hand.R
 		AttachmentSkeleton: turret_skeleton1
 		TurretBone: a-s-Base
 		BarrelBone: a-s-Barrel
@@ -169,7 +169,7 @@ RUTEST2:
 	TurretAttachment@2:
 		Name: turret2
 		SkeletonBinded: body
-		AttachingBone: s-Adj_Butt.L
+		AttachingBone: a-s-Rig_Hand.L
 		AttachmentSkeleton: turret_skeleton2
 		TurretBone: a-s-Base
 		BarrelBone: a-s-Barrel
