抛射体修改，hitshape修改，抛射体添加

--- a/mods/ts/3dtest/testrulse.yaml
+++ b/mods/ts/3dtest/testrulse.yaml
@@ -186,7 +186,7 @@ RUTEST2:
 		TurretFireAngleLimitation: true
 		BarrelFireAngleLimitation: true
 	AttachedArmament@2:
-		Weapon: TestVulcan
+		Weapon: VectorBoosterMul
 		SkeletonToUse: turret_skeleton2
 		FromBonePose: firepose
 		FacingTolerance: 40
