3d碰撞的bullet，测试霰弹枪

--- a/mods/ts/maps/fields-of-green-test/rules.yaml
+++ b/mods/ts/maps/fields-of-green-test/rules.yaml
@@ -13,9 +13,9 @@ World:
 	LuaScript:
 		Scripts: fields-of-green.lua
 	MusicPlaylist:
-		BackgroundMusic: intro
-		DisableWorldSounds: true
-		AllowMuteBackgroundMusic: true
+		# BackgroundMusic: intro
+		# DisableWorldSounds: true
+		# AllowMuteBackgroundMusic: true
 
 ^BaseWorld:
 	TerrainLighting:
