--- a/mods/ts/rules/gdi-structures.yaml
+++ b/mods/ts/rules/gdi-structures.yaml
@@ -462,6 +462,9 @@ GARADR:
 	ProvidesPrerequisite@buildingname:
 	IsometricSelectable:
 		Height: 72
+	HitShape:
+		Type: Rectangle
+			VerticalTopOffset: 2172
 
 GATECH:
 	Inherits: ^Building
