--- a/mods/ts/3dtest/weapons.yaml
+++ b/mods/ts/3dtest/weapons.yaml
@@ -85,18 +85,19 @@ TestVulcan:
 	Report: cygun1.aud
 	Projectile: Bullet
 		DetectTargetFromLength: 0.7
-		ContrailLength: 6
+		ContrailLength: 5
 		ContrailWidth: 44
 		ContrailColor: F0D05CA0
 		ContrailDelay: 0
 		ContrailBlendMode: ScreenAdditive
 		Speed: 1100
-		LaunchAngle: 10
+		LaunchAngle: 0
 		ZOffset: 1024
 		Inaccuracy: 1c0
 		VerticalInaccuracy: 1c0
 		OnlyHitToExplode: true
 		ExplodeUnderThisAltitude: 0
+		Blockable: false
 	Warhead@1Dam: SpreadDamage
 		Damage: 900
 		Spread: 0c372
@@ -104,6 +105,36 @@ TestVulcan:
 	Warhead@2Eff: CreateEffect
 		Explosions: piff
 		ValidTargets: Ground, Air
+
+TestMG:
+	Inherits: TestVulcan
+	MinRange: 0c128
+	Range: 6c512
+	ReloadDelay: 30
+	Burst: 4
+	BurstDelay: 1
+	Projectile: Bullet
+		LifeTime: 13
+		ContrailLength: 2
+		Inaccuracy: 200
+		VerticalInaccuracy: 126
+	Warhead@1Dam: SpreadDamage
+		Damage: 900
+		Spread: 0c128
+		ValidTargets: Ground, Water, Air
+
+TestShotGun:
+	ReloadDelay: 24
+	Range: 6c768
+	Burst: 1
+	# BurstDelays: 2
+	Report: gun18.aud
+	Projectile: InstantScat
+		ScatWeapon: TestMG
+		ScatCount: 9
+		Inaccuracy: 500
+		VerticalInaccuracy: 350
+	Warhead@1Dam: SpreadDamage
 
 VectorBooster:
 	Range: 8c0
