--- a/mods/ts/maps/fields-of-green-test/map.yaml
+++ b/mods/ts/maps/fields-of-green-test/map.yaml
@@ -1457,9 +1457,6 @@ Actors:
 	Actor457: gadept
 		Owner: Multi0
 		Location: 48,31
-	Actor458: garadr
-		Owner: Multi0
-		Location: 52,26
 	Actor460: 4tnk
 		Owner: Multi0
 		Facing: 384
@@ -1507,5 +1504,50 @@ Actors:
 		Owner: Multi0
 		Facing: 384
 		Location: 51,30
+	Actor474: gapile
+		Faction: nod
+		Location: 60,23
+		Owner: Multi0
+	Actor475: gaweap
+		Faction: nod
+		Location: 55,28
+		Owner: Multi0
+	Actor476: gahpad
+		Faction: nod
+		Location: 57,34
+		Owner: Multi0
+	Actor477: doggie
+		Owner: Creeps
+		Facing: 384
+		SubCell: 2
+		Location: 64,-5
+	Actor478: doggie
+		Owner: Creeps
+		Facing: 384
+		SubCell: 2
+		Location: 57,-7
+	Actor479: doggie
+		Owner: Creeps
+		Facing: 384
+		SubCell: 2
+		Location: 65,-1
+	Actor480: jfish
+		Owner: Creeps
+		Facing: 384
+		Location: 57,11
+	Actor481: jfish
+		Owner: Creeps
+		Facing: 384
+		Location: 63,12
+	Actor482: doggie
+		Owner: Creeps
+		Facing: 384
+		SubCell: 2
+		Location: 60,14
+	Actor483: doggie
+		Owner: Creeps
+		Facing: 384
+		SubCell: 2
+		Location: 58,9
 
 Rules: rules.yaml
