--- a/mods/ts/rules/gdi-support.yaml
+++ b/mods/ts/rules/gdi-support.yaml
@@ -93,13 +93,13 @@ GACTWR:
 		Sequence: turret-sam
 	Armament@VULCPRIMARY:
 		RequiresCondition: tower.vulcan
-		Weapon: VulcanTower
+		Weapon: VulcanMG #VulcanTower
 		LocalOffset: 588,120,784
 		MuzzleSequence: muzzle
 	Armament@VULCSECONDARY:
 		RequiresCondition: tower.vulcan
 		Name: secondary
-		Weapon: VulcanTower
+		Weapon: VulcanMG #VulcanTower
 		LocalOffset: 588,-120,784
 		MuzzleSequence: muzzle
 	Armament@ROCKET:
